Adding platform driver

--- a/Makefile.ps2
+++ b/Makefile.ps2
@@ -150,8 +150,8 @@ OSOBJS += \
 
 endif
 
-# OSOBJS += \
-# 	$(OS)/$(OS).o \
+OSOBJS += \
+	$(OS)/$(OS)_platform.o \
 # 	$(OS)/$(OS)_thread.o \
 # 	$(OS)/$(OS)_audio.o \
 # 	$(OS)/$(OS)_power.o \
