--- a/Makefile.ps2
+++ b/Makefile.ps2
@@ -153,12 +153,12 @@ endif
 OSOBJS += \
 	$(OS)/$(OS)_platform.o \
 	$(OS)/$(OS)_power.o \
+	$(OS)/$(OS)_ui_text.o \
 # 	$(OS)/$(OS)_thread.o \
 # 	$(OS)/$(OS)_audio.o \
 # 	$(OS)/$(OS)_ticker.o \
 # 	$(OS)/$(OS)_input.o \
 # 	$(OS)/$(OS)_video.o \
-# 	$(OS)/$(OS)_ui_text.o \
 
 ifeq ($(ADHOC), 1)
 OSOBJS += $(OS)/adhoc.o
