--- a/Makefile.ps2
+++ b/Makefile.ps2
@@ -154,10 +154,10 @@ OSOBJS += \
 	$(OS)/$(OS)_platform.o \
 	$(OS)/$(OS)_power.o \
 	$(OS)/$(OS)_ui_text.o \
+	$(OS)/$(OS)_input.o \
 # 	$(OS)/$(OS)_thread.o \
 # 	$(OS)/$(OS)_audio.o \
 # 	$(OS)/$(OS)_ticker.o \
-# 	$(OS)/$(OS)_input.o \
 # 	$(OS)/$(OS)_video.o \
 
 ifeq ($(ADHOC), 1)
