--- a/Makefile.ps2
+++ b/Makefile.ps2
@@ -156,8 +156,8 @@ OSOBJS += \
 	$(OS)/$(OS)_ui_text.o \
 	$(OS)/$(OS)_input.o \
 	$(OS)/$(OS)_video.o \
+	$(OS)/$(OS)_audio.o \
 # 	$(OS)/$(OS)_thread.o \
-# 	$(OS)/$(OS)_audio.o \
 # 	$(OS)/$(OS)_ticker.o \
 
 ifeq ($(ADHOC), 1)
