--- a/Makefile.x86_64
+++ b/Makefile.x86_64
@@ -22,6 +22,7 @@ SAVE_STATE = 0
 UI_32BPP = 1
 RELEASE = 0
 SYSTEM_BUTTONS = 0
+DEBUG = 1
 
 #------------------------------------------------------------------------------
 # Version
