Adding ticket driver

--- a/Makefile.x86_64
+++ b/Makefile.x86_64
@@ -152,10 +152,10 @@ endif
 
 OSOBJS += \
 	$(OS)/$(OS)_platform.o \
+	$(OS)/$(OS)_ticker.o \
 # 	$(OS)/$(OS)_thread.o \
 # 	$(OS)/$(OS)_audio.o \
 # 	$(OS)/$(OS)_power.o \
-# 	$(OS)/$(OS)_ticker.o \
 # 	$(OS)/$(OS)_input.o \
 # 	$(OS)/$(OS)_video.o \
 # 	$(OS)/$(OS)_ui_text.o \
