--- a/Makefile.x86_64
+++ b/Makefile.x86_64
@@ -154,11 +154,11 @@ OSOBJS += \
 	$(OS)/$(OS)_platform.o \
 	$(OS)/$(OS)_ticker.o \
 	$(OS)/$(OS)_power.o \
+	$(OS)/$(OS)_ui_text.o \
 # 	$(OS)/$(OS)_thread.o \
 # 	$(OS)/$(OS)_audio.o \
 # 	$(OS)/$(OS)_input.o \
 # 	$(OS)/$(OS)_video.o \
-# 	$(OS)/$(OS)_ui_text.o \
 
 # ifeq ($(ADHOC), 1)
 # OSOBJS += $(OS)/adhoc.o
