--- a/Makefile.x86_64
+++ b/Makefile.x86_64
@@ -155,9 +155,9 @@ OSOBJS += \
 	$(OS)/$(OS)_ticker.o \
 	$(OS)/$(OS)_power.o \
 	$(OS)/$(OS)_ui_text.o \
+	$(OS)/$(OS)_input.o \
 # 	$(OS)/$(OS)_thread.o \
 # 	$(OS)/$(OS)_audio.o \
-# 	$(OS)/$(OS)_input.o \
 # 	$(OS)/$(OS)_video.o \
 
 # ifeq ($(ADHOC), 1)
