--- a/Makefile.x86_64
+++ b/Makefile.x86_64
@@ -157,8 +157,8 @@ OSOBJS += \
 	$(OS)/$(OS)_ui_text.o \
 	$(OS)/$(OS)_input.o \
 	$(OS)/$(OS)_video.o \
+	$(OS)/$(OS)_audio.o \
 # 	$(OS)/$(OS)_thread.o \
-# 	$(OS)/$(OS)_audio.o \
 
 # ifeq ($(ADHOC), 1)
 # OSOBJS += $(OS)/adhoc.o
