Adding thread driver

--- a/Makefile.x86_64
+++ b/Makefile.x86_64
@@ -158,7 +158,7 @@ OSOBJS += \
 	$(OS)/$(OS)_input.o \
 	$(OS)/$(OS)_video.o \
 	$(OS)/$(OS)_audio.o \
-# 	$(OS)/$(OS)_thread.o \
+	$(OS)/$(OS)_thread.o \
 
 # ifeq ($(ADHOC), 1)
 # OSOBJS += $(OS)/adhoc.o
