Cleaned all warning but still crashing

--- a/Makefile.x86_64
+++ b/Makefile.x86_64
@@ -186,14 +186,12 @@ include src/makefiles/$(TARGET).mak
 #------------------------------------------------------------------------------
 
 CFLAGS = \
-	-fno-builtin \
 	-Wno-unused-command-line-argument \
-	-Wno-void-pointer-to-int-cast \
-	-Wno-int-to-pointer-cast \
-	-Wno-pointer-to-int-cast \
-	-Wno-invalid-source-encoding \
 	-Wno-unused-but-set-variable \
 	-Wno-unused-function \
+	-Wno-invalid-source-encoding \
+	-Werror \
+	
 
 ifeq ($(DEBUG), 1)
 CFLAGS += -O0 -g
