--- a/.github/workflows/computer.yml
+++ b/.github/workflows/computer.yml
@@ -26,20 +26,21 @@ jobs:
 
     - name: Install dependencies
       run: |
-        apt-get update
-        apt-get install -y --no-install-recommends \
+        sudo apt-get update
+        sudo apt-get install -y --no-install-recommends \
           build-essential \
           git \
           wget \
           unzip \
           libbz2-dev \
-          sdl2-dev \
+          libsdl2-dev
 
     - name: Compile project
       run: |
         mkdir build_mac
         cd build_mac
         cmake -DTARGET="MVS" -DPLATFORM="X86_64" ..
+        make -j $(getconf _NPROCESSORS_ONLN)
 
     - name: Get short SHA
       id: slug
