Add MacOS compilation

--- a/.github/workflows/computer.yml
+++ b/.github/workflows/computer.yml
@@ -12,9 +12,10 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: [ubuntu-latest, macos-latest]
         psp_mode: [LARGE_MEMORY=0]
         command_list: [COMMAND_LIST=0]
         adhoc: [ADHOC=0]
@@ -24,7 +25,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Install dependencies
+    - name: Install Ubuntu dependencies
+      if: matrix.os == 'ubuntu-latest'
       run: |
         sudo apt-get update
         sudo apt-get install -y --no-install-recommends \
@@ -34,6 +36,13 @@ jobs:
           unzip \
           libbz2-dev \
           libsdl2-dev
+
+
+    - name: Install Mac dependencies
+      if: matrix.os == 'macOS-latest'
+      run: |
+        brew update
+        brew install cmake sdl2 libzip
 
     - name: Compile project
       run: |
@@ -50,6 +59,6 @@ jobs:
       if: ${{ success() }}
       uses: actions/upload-artifact@v3
       with:
-        name: NJEMU-${{ steps.slug.outputs.sha8 }}-${{ matrix.psp_mode }}-${{ matrix.command_list }}-${{ matrix.adhoc }}-${{ matrix.save_state }}-${{ matrix.emulator }}
+        name: NJEMU-${{ steps.slug.outputs.sha8 }}-${{ matrix.os }}-${{ matrix.psp_mode }}-${{ matrix.command_list }}-${{ matrix.adhoc }}-${{ matrix.save_state }}-${{ matrix.emulator }}
         path: |
           build_mac/MVS
