Add PSP CMake too

--- a/.github/workflows/psp-cmake.yml
+++ b/.github/workflows/psp-cmake.yml
@@ -1,4 +1,4 @@
-name: Computer
+name: PSP CMAKE
 
 on:
   push:
@@ -13,10 +13,9 @@ on:
 jobs:
   build:
     name: ${{ matrix.target }} LARGE_MEMORY=${{ matrix.large_memory }} COMMAND_LIST=${{ matrix.command_list }} ADHOC=${{ matrix.adhoc }} SAVE_STATE=${{ matrix.save_state }} NO_GUI=${{ matrix.no_gui }}
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
         target: [MVS] #TOOD: CPS1, CPS2, NCDZ
         large_memory: [ON, OFF]
         command_list: [OFF] #TODO: ON
@@ -30,33 +29,21 @@ jobs:
             save_state: FALSE
       fail-fast: false
 
+    container: pspdev/pspdev:latest
     steps:
     - uses: actions/checkout@v4
 
-    - name: Install Ubuntu dependencies
-      if: matrix.os == 'ubuntu-latest'
+    - name: Install dependencies
       run: |
-        sudo apt-get update
-        sudo apt-get install -y --no-install-recommends \
-          build-essential \
-          git \
-          wget \
-          unzip \
-          libbz2-dev \
-          libsdl2-dev
-
-
-    - name: Install Mac dependencies
-      if: matrix.os == 'macOS-latest'
-      run: |
-        brew update
-        brew install cmake sdl2 libzip
+        apk add build-base git bash
+    
 
     - name: Compile project
       run: |
         mkdir build
         cd build
-        cmake -DPLATFORM="X86_64" \
+        cmake -DPLATFORM="PSP" \
+          -DCMAKE_TOOLCHAIN_FILE=$PSPDEV/psp/share/pspdev.cmake \
           -DTARGET="${{ matrix.target }}" \
           -DLARGE_MEMORY=${{ matrix.large_memory }} \
           -DCOMMAND_LIST=${{ matrix.command_list }} \
@@ -73,6 +60,6 @@ jobs:
       if: ${{ success() }}
       uses: actions/upload-artifact@v4
       with:
-        name: NJEMU-${{ steps.slug.outputs.sha8 }}-${{ matrix.os }}-${{ matrix.target }}-large_memory_${{ matrix.large_memory }}-command_list_${{ matrix.command_list }}-adhoc_${{ matrix.adhoc }}-save_state${{ matrix.save_state }}
+        name: NJEMU-${{ steps.slug.outputs.sha8 }}-${{ matrix.target }}-large_memory_${{ matrix.large_memory }}-command_list_${{ matrix.command_list }}-adhoc_${{ matrix.adhoc }}-save_state${{ matrix.save_state }}
         path: |
-          build/${{ matrix.target }}
+          build/*.PBP
