--- a/.github/workflows/psp.yml
+++ b/.github/workflows/psp.yml
@@ -12,6 +12,7 @@ on:
 
 jobs:
   build:
+    name: ${{ matrix.emulator }} LARGE_MEMORY=${{ matrix.psp_mode }} COMMAND_LIST=${{ matrix.command_list }} ADHOC=${{ matrix.adhoc }} SAVE_STATE=${{ matrix.save_state }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -29,7 +30,7 @@ jobs:
 
     container: pspdev/pspdev:latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Install dependencies
       run: |
@@ -47,7 +48,7 @@ jobs:
 
     - name: Upload artifacts
       if: ${{ success() }}
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: NJEMU-${{ steps.slug.outputs.sha8 }}-${{ matrix.psp_mode }}-${{ matrix.command_list }}-${{ matrix.adhoc }}-${{ matrix.save_state }}-${{ matrix.emulator }}
         path: |
