Use PATH_MAX instead of custom MAX_PATH

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,8 +96,12 @@ set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
 # Common Flags options
 set(COMMON_FLAGS
     -ffast-math 
-    -fsingle-precision-constant
 )
+if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+    list(APPEND COMMON_FLAGS
+        -fsingle-precision-constant
+    )
+endif()
 
 # Common Warning options
 set(WARNING_OPTIONS
