--- a/.github/workflows/ps2.yml
+++ b/.github/workflows/ps2.yml
@@ -50,6 +50,7 @@ jobs:
           -DSAVE_STATE=${{ matrix.save_state }} \
           ..
         make -j $(getconf _NPROCESSORS_ONLN)
+        mv ${{ matrix.target }} ${{ matrix.target }}.elf
 
     - name: Get short SHA
       id: slug
