--- a/.github/workflows/ps2.yml
+++ b/.github/workflows/ps2.yml
@@ -45,6 +45,14 @@ jobs:
         make -j $(getconf _NPROCESSORS_ONLN) clean
         make -j $(getconf _NPROCESSORS_ONLN) install
 
+    - name: Compile custom ps2_driver branch
+      run: |
+        git clone https://github.com/fjtrujy/ps2_drivers.git
+        cd ps2_drivers
+        git checkout mx4sio
+        make -j $(getconf _NPROCESSORS_ONLN) clean
+        make -j $(getconf _NPROCESSORS_ONLN) install
+
     - name: Compile project
       run: |
         mkdir build
