--- a/.github/workflows/ps2.yml
+++ b/.github/workflows/ps2.yml
@@ -37,11 +37,11 @@ jobs:
       run: |
         apk add build-base git bash cmake
     
-    - name: Compile custom gskit branch
+    - name: Compile custom ps2sdk branch
       run: |
-        git clone https://github.com/fjtrujy/gsKit.git
-        cd gsKit
-        git checkout finish_handler
+        git clone https://github.com/fjtrujy/ps2sdk.git
+        cd ps2sdk
+        git checkout srxfixup_u
         make -j $(getconf _NPROCESSORS_ONLN) clean
         make -j $(getconf _NPROCESSORS_ONLN) install
 
